lib/src/compiler/tests/testdata/errors/66.out
error[E001]: syntax error
 --> line:1:13
  |
1 | rule test : condition: true }
  |             ^^^^^^^^^ expecting identifier, found `condition`
  |